--- a/comparator/index.html
+++ b/comparator/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="static/normalize.css">
-	<link rel="stylesheet" href="main.css">
-	<title>scheme-lang.com</title>
+	<linki rel="stylesheet" href="main.css">
+	<title>scheme.rs/comparator/</title>
     </head>
     <body>
 	<div id="overlay">
