--- a/discourse/index.html
+++ b/discourse/index.html
@@ -18,10 +18,22 @@ through three gates.</p>
 <li>At the second gate ask, is it necessary.</li>
 <li>At the third gate ask, is it kind.</li>
 </ul>
-<blockquote><p>"You should attempt to re-express your target's position so clearly,
-vividly, and fairly that your target says, "Thanks, I wish I'd
-thought of putting it that way.""</p>
-<p>— Rapoport's First Rule</p>
+<blockquote><ol>
+<li><p>You should attempt to re-express your target's position so
+clearly, vividly, and fairly that your target says, "Thanks, I
+wish I'd thought of putting it that way."</p>
+</li>
+<li><p>You should list any points of agreement (especially if they are
+not matters of general or widespread agreement).</p>
+</li>
+<li><p>You should list any points of agreement (especially if they are
+not matters of general or widespread agreement).</p>
+</li>
+<li><p>You should list any points of agreement (especially if they are
+not matters of general or widespread agreement).</p>
+</li>
+</ol>
+<p>— <a href="https://wikiless.org/wiki/Rogerian_rhetoric?lang=en#Dennett&#39;s_version">Dennett's version of Rapoport's Rules</a></p>
 </blockquote>
 <h2>Argument Ranking</h2>
 <ul>
@@ -126,9 +138,9 @@ to a body.</p>
 done, their aim fulfilled, people will say: we did it ourselves."</p>
 <p>— 老子(Lao Tse), 道德經(Dao De Jing)</p>
 </blockquote>
-<p>The first principle of Wikipedia etiquette has been said to be <strong>Assume Good
-Faith</strong>.</p>
-<h4>Wrong discourse</h4>
+<p>The first principle of Wikipedia etiquette has been said to be
+<strong>Assume Good Faith</strong>, also they <strong>Be Bold, but not Reckless</strong>.</p>
+<p><strong>Wrong discourse</strong></p>
 <ul>
 <li><p>Answer: Jumping into a conversation with endless unapplicable,
 unrealistic or unrelated answers to the question.</p>
@@ -138,7 +150,7 @@ claim of just asking questions, and ignoring the answers. Asking
 loaded questions.</p>
 </li>
 </ul>
-<h4>Good discourse</h4>
+<p><strong>Good discourse</strong></p>
 <ul>
 <li><p>Answer: A clear and honest response to the central point of a question
 without an aggressive attempt to convince.</p>
@@ -147,7 +159,6 @@ without an aggressive attempt to convince.</p>
 honest, regardless of the outcome of the interaction.</p>
 </li>
 </ul>
-<h4>Conclusion</h4>
 <p>Social rules are expected to be broken from time to time, in that
 regard they are different from a code of conduct.</p>
 <h3>Response Ranking</h3>
@@ -213,13 +224,21 @@ interests of the other that is seeking to make you act in their interests.</p>
 <blockquote><p>"Kings speak for the realm, governors for the state, popes for the church.
 Indeed, the titled, as titled, cannot speak <strong>with</strong> annyone."</p>
 <p>— James P. Carse, Finite and Infinite Games</p>
+<p>Instead of trying to prove your opponent wrong, try to see in what sense he might be right.
+— Robert Nozick, Anarchy, State, and Utopia</p>
+<p>"I don't argue: I just say what I know or what I believe, as the case may be."
+— John W. Cohan</p>
+<p>"You should mention anything you have learned from your target."</p>
 </blockquote>
+<h2>LICENSE</h2>
 <p>The whole page is licensed under
 <a href="https://creativecommons.org/licenses/by-nc-sa/4.0">cc-by-nc-sa</a>; it
 slightly adapted from <a href="https://wiki.xxiivv.com/site/discourse.html">https://wiki.xxiivv.com/site/discourse.html</a> to
 be able to support the static site generator used on <a href="https://scheme.rs">https://scheme.rs</a>
 and to avoid the words <code>bad</code> (replaced with <code>wrong</code>) and <code>faith</code>
-(replaced with <code>discourse</code>).</p>
+(replaced with <code>discourse</code>), a few other changes, see
+<a href="https://git.sr.ht/~amirouche/scheme.rs/log/main/item/discourse/index.md">history</a>
+for complete log.</p>
 </div>
     </div>
   </body>
