add LICENSE, and makefile to build single pages

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   <body>
     <div id="container">
       <div><p>Let's agree that <em>serif</em> fonts do not always carry boring stuff. And have a taste of it:</p>
-<blockquote><p>Programming languages should be designed not by piling feature on top of feature, but by removing the weaknesses and restrictions that make additional features appear necessary.
-— <a href="http://r7rs.org/">Revised 7 Report on the Algorithmic Language Scheme</a>, Introduction.</p>
+<blockquote><p>Programming languages should be designed not by piling feature on
+top of feature, but by removing the weaknesses and restrictions that
+make additional features appear necessary.  — <a href="http://r7rs.org/">Revised 7 Report on
+the Algorithmic Language Scheme</a>, Introduction.</p>
 </blockquote>
 <p>Otherwise said, Scheme offers a minimalist core of powerful primitives
 upon which one can build abstractions to solve (real world) problems.</p>
@@ -78,6 +80,31 @@ give something back.</p>
 <li><a href="/scheme/vector/"><code>(scheme vector)</code></a></li>
 <li><a href="/scheme/write/"><code>(scheme write)</code></a> R7RS-small</li>
 </ul>
+<h2>Source, and single page files</h2>
+<p>You can find the <a href="https://git.sr.ht/~amirouche/scheme.rs">source over the
+rainbow</a>. There is available a
+<a href="scheme.rs.md">single markdown file</a>, and a <a href="scheme.rs.html">(slightly broken) single
+html file</a>;</p>
+<h2>LICENSE</h2>
+<p>Except otherwise noted, this documentation is licensed under the SRFI
+license:</p>
+<p>Copyright (C) Amirouche Amazigh BOUBEKKI, and contributors (2021).</p>
+<p>Permission is hereby granted, free of charge, to any person obtaining
+a copy of this software and associated documentation files (the
+"Software"), to deal in the Software without restriction, including
+without limitation the rights to use, copy, modify, merge, publish,
+distribute, sublicense, and/or sell copies of the Software, and to
+permit persons to whom the Software is furnished to do so, subject to
+the following conditions:</p>
+<p>The above copyright notice and this permission notice shall be
+included in all copies or substantial portions of the Software.</p>
+<p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 </div>
     </div>
   </body>
