--- a/discourse/index.html
+++ b/discourse/index.html
@@ -11,13 +11,14 @@
   <body>
     <div id="container">
       <div><h1>A cheatsheet on Discourse.</h1>
-<p><strong>The three gates of speech</strong> : Before you speak, let your words pass
-through three gates.</p>
+<h2>The three gates of speech</h2>
+<p>Before you speak, let your words pass through three gates.</p>
 <ul>
 <li>At the first gate, ask yourself, is it true.</li>
 <li>At the second gate ask, is it necessary.</li>
 <li>At the third gate ask, is it kind.</li>
 </ul>
+<h2>Rogerian rhetoric</h2>
 <blockquote><ol>
 <li><p>You should attempt to re-express your target's position so
 clearly, vividly, and fairly that your target says, "Thanks, I
@@ -26,11 +27,10 @@ wish I'd thought of putting it that way."</p>
 <li><p>You should list any points of agreement (especially if they are
 not matters of general or widespread agreement).</p>
 </li>
-<li><p>You should list any points of agreement (especially if they are
-not matters of general or widespread agreement).</p>
+<li><p>You should mention anything you have learned from your target.</p>
 </li>
-<li><p>You should list any points of agreement (especially if they are
-not matters of general or widespread agreement).</p>
+<li><p>Only then are you permitted to say so much as a word of rebuttal
+or criticism.</p>
 </li>
 </ol>
 <p>— <a href="https://wikiless.org/wiki/Rogerian_rhetoric?lang=en#Dennett&#39;s_version">Dennett's version of Rapoport's Rules</a></p>
@@ -221,11 +221,13 @@ that may be vitally important to your own interests but are contrary to the
 interests of the other that is seeking to make you act in their interests.</p>
 </li>
 </ul>
+<h2>Quotes</h2>
 <blockquote><p>"Kings speak for the realm, governors for the state, popes for the church.
 Indeed, the titled, as titled, cannot speak <strong>with</strong> annyone."</p>
 <p>— James P. Carse, Finite and Infinite Games</p>
-<p>Instead of trying to prove your opponent wrong, try to see in what sense he might be right.
-— Robert Nozick, Anarchy, State, and Utopia</p>
+<p>"Instead of trying to prove your opponent wrong, try to see in what
+sense he might be right."  — Robert Nozick, Anarchy, State, and
+Utopia</p>
 <p>"I don't argue: I just say what I know or what I believe, as the case may be."
 — John W. Cohan</p>
 <p>"You should mention anything you have learned from your target."</p>
@@ -233,10 +235,10 @@ Indeed, the titled, as titled, cannot speak <strong>with</strong> annyone."</p>
 <h2>LICENSE</h2>
 <p>The whole page is licensed under
 <a href="https://creativecommons.org/licenses/by-nc-sa/4.0">cc-by-nc-sa</a>; it
-slightly adapted from <a href="https://wiki.xxiivv.com/site/discourse.html">https://wiki.xxiivv.com/site/discourse.html</a> to
-be able to support the static site generator used on <a href="https://scheme.rs">https://scheme.rs</a>
-and to avoid the words <code>bad</code> (replaced with <code>wrong</code>) and <code>faith</code>
-(replaced with <code>discourse</code>), a few other changes, see
+is slightly adapted from <a href="https://wiki.xxiivv.com/site/discourse.html">https://wiki.xxiivv.com/site/discourse.html</a>
+to be able to support the static site generator used on
+<a href="https://scheme.rs">https://scheme.rs</a> and to avoid the words "bad" (replaced with "wrong")
+and "faith" (replaced with "discourse"), a few other changes, see
 <a href="https://git.sr.ht/~amirouche/scheme.rs/log/main/item/discourse/index.md">history</a>
 for complete log.</p>
 </div>
