--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ give something back.</p>
 <p>You can find the <a href="https://git.sr.ht/~amirouche/scheme.rs">source over the
 rainbow</a>. There is available a
 <a href="scheme.rs.md">single markdown file</a>, and a <a href="scheme.rs.html">single
-html file</a> and a <a href="scheme.rs.html">pdf</a>;</p>
+html file</a> and a <a href="scheme.rs.pdf">pdf</a>;</p>
 <h2>LICENSE</h2>
 <p>Except otherwise noted, this documentation is licensed under the SRFI
 license:</p>
