--- a/scheme.rs.html
+++ b/scheme.rs.html
@@ -272,7 +272,7 @@
 <li><a href="/scheme/write/"><code>(scheme write)</code></a> R7RS-small</li>
 </ul>
 <h2 id="source-and-single-page-files">Source, and single page files</h2>
-<p>You can find the <a href="https://git.sr.ht/~amirouche/scheme.rs">source over the rainbow</a>. There is available a <a href="scheme.rs.md">single markdown file</a>, and a <a href="scheme.rs.html">single html file</a> and a <a href="scheme.rs.html">pdf</a>;</p>
+<p>You can find the <a href="https://git.sr.ht/~amirouche/scheme.rs">source over the rainbow</a>. There is available a <a href="scheme.rs.md">single markdown file</a>, and a <a href="scheme.rs.html">single html file</a> and a <a href="scheme.rs.pdf">pdf</a>;</p>
 <h2 id="license">LICENSE</h2>
 <p>Except otherwise noted, this documentation is licensed under the SRFI license:</p>
 <p>Copyright (C) Amirouche Amazigh BOUBEKKI, and contributors (2021).</p>
