add r7rs-small as specification/index.md...
... this was generated from r7rs-spec at [0]. It does not include
sem.tex and syn.tex, and reworked to look nicer in html. The pdf
output from the markdown is borken.

[0] https://github.com/johnwcowan/r7rs-spec/pull/4

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ give something back.</p>
 <p>Or, like others, to make it your secret sauce.</p>
 <h2><a href="/discourse/">Discourse</a></h2>
 <h2><a href="/tutorial/">Tutorial</a></h2>
-<h2>Standard Library</h2>
+<h2><a href="/specification/">Specification</a></h2>
+<h2>Standard Libraries</h2>
 <ul>
 <li><a href="/scheme/base/"><code>(scheme base)</code></a> R7RS-small</li>
 <li><a href="/scheme/bitwise/"><code>(scheme bitwise)</code></a></li>
